// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select clearable icon should be work 1`] = `
<div class="fect-select " style="--select-fontSize: 14px; --select-minWidth: 160px; --select-height: calc(1.688 * var(--fay-gap));">
  <!----><span class="value" style="justify-content: space-between;"></span>
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
`;

exports[`Select should be render as element 1`] = `
<div class="fect-select " style="--select-fontSize: 14px; --select-minWidth: 160px; --select-height: calc(1.688 * var(--fay-gap));"><span class="value fect-select__placeholder"></span>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
`;

exports[`Select should be support hidden clearable icon 1`] = `
<div class="fect-select " style="--select-fontSize: 14px; --select-minWidth: 160px; --select-height: calc(1.688 * var(--fay-gap));">
  <!----><span class="value" style="justify-content: space-between;"></span>
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
`;

exports[`Select should be support hidden clearable icon 2`] = `
<div class="fect-select " style="--select-fontSize: 14px; --select-minWidth: 160px; --select-height: calc(1.688 * var(--fay-gap));">
  <!----><span class="value" style="justify-content: space-between;"><!----><div class="fect-select__item">Vue</div><div class="fect-select__clearIcon" style="margin-right: 5px;"><svg viewBox="0 0 24 24" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" color="currentColor"><path d="M18 6L6 18"></path><path d="M6 6l12 12"></path></svg></div><!----></span>
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
`;

exports[`Select should support different sizes 1`] = `
<div class="fect-select " style="--select-fontSize: 12px; --select-minWidth: 100px; --select-height: calc(1 * var(--fay-gap));"><span class="value fect-select__placeholder"></span>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
<div class="fect-select " style="--select-fontSize: 12px; --select-minWidth: 128px; --select-height: calc(1.35 * var(--fay-gap));"><span class="value fect-select__placeholder"></span>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
<div class="fect-select " style="--select-fontSize: 14px; --select-minWidth: 160px; --select-height: calc(1.688 * var(--fay-gap));"><span class="value fect-select__placeholder"></span>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
<div class="fect-select " style="--select-fontSize: 16px; --select-minWidth: 200px; --select-height: calc(1.688 * var(--fay-gap));"><span class="value fect-select__placeholder"></span>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-select__icon-context "><svg viewBox="0 0 24 24" width="20px" height="20px" strokeWidth="1" strokeLinecap="round" color="currentColor" stroke="currentColor" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision">
      <path d="M6 9l6 6 6-6"></path>
    </svg></div>
</div>
`;
